# kmer-sets-compression

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: benchmark.yml  test.yml
20201021/: README.md  main-compact.cc  main.cc
20201025/: CMakeLists.txt  main.cc
benchmark/: int_set.cc  kmer.cc  kmer_counter.cc  kmer_set.cc  spss.cc
lib/: flags.h  graph.h  io.h  kmer.h  kmer_counter.h  kmer_set.h  kmer_set_compact.h  kmer_set_compressed.h  kmer_set_set.h  log.h  neighbor_joining.h  random.h  range.h  search.h  suffix_array.h  unitigs.h
lib/core/: graph.h  int_set.h  io.h  kmer.h  kmer_counter.h  kmer_set.h  kmer_set_compact.h  kmer_set_compressed.h  kmer_set_immutable.h  kmer_set_set.h  neighbor_joining.h  parallel_disjoint_set.h  random.h  range.h  spss.h  suffix_array.h  unitigs.h
search/: CMakeLists.txt  main.cc
search/lib/: kmer.h  kmer_set.h
search/test/: kmer.cc
src/: compact.cc  compress.cc  decompress.cc  kmerset-build.cc  kmerset-compress.cc  kmerset-decompress.cc  kmerset-immutable.cc  kmerset-intersection-approximation.cc  kmerset-intersection-performance.cc  kmerset-multiple-compress.cc  kmerset-multiple-decompress.cc  kmerset-similarity.cc  kmerset-stat.cc  kmersetset-compress.cc  kmersetset-decompress.cc  kmersetset.cc  search-allpair.cc  search.cc  spss-benchmark.cc  spss.cc
test/: graph.cc  int_set.cc  io.cc  kmer.cc  kmer_counter.cc  kmer_set.cc  kmer_set_compact.cc  kmer_set_compressed.cc  kmer_set_immutable.cc  kmer_set_set.cc  neighbor_joining.cc  parallel_disjoint_set.cc  range.cc  search.cc  spss.cc  suffix_array.cc  unitigs.cc
